--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "console.table": "^0.10.0",
@@ -13,10 +13,10 @@
     "express": "~4.16.1",
     "inquirer": "^9.1.4",
     "morgan": "~1.9.1",
-    "mysql2": "^2.3.3",
-    "nodemon": "^2.0.20"
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
-    "jest": "^29.2.2"
+    "jest": "^29.2.2",
+    "nodemon": "^2.0.20"
   }
 }
